--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -5,4 +5,5 @@ footer {
     background-color: #f8f8f8;
     padding: 10px;
     text-align: center;
+    z-index: 10;
 }
